# datafun-1-getting-started

./: README.md  myscript.py  output.txt  pyproject.toml
