[tool.poetry]
name = "datafun-1-getting-started"
version = "0.1.0"
description = "Getting started with Professional Data Analytics"
authors = ["Denise Case"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
